Adding error messages

--- a/0.1.1/Makefile.in
+++ b/0.1.1/Makefile.in
@@ -1,5 +1,5 @@
-CFLAGS = @CFLAGS@ @XML_CFLAGS@ @GSL_CFLAGS@ -O2 -Wall
-LIBS = @LDFLAGS@ @LIBS@ @XML_LIBS@ @GSL_CFLAGS@
+CFLAGS = @CFLAGS@ @XML_CFLAGS@ @GLIB_CFLAGS@ @GSL_CFLAGS@ -O2 -Wall
+LIBS = @LDFLAGS@ @LIBS@ @XML_LIBS@ @GLIB_LIBS@ @GSL_LIBS@
 CC = @CC@ @ARCH@ @LTO@ @STD@
 EXE = @EXE@
 
