--- a/1.1.0/vyr35/makefile
+++ b/1.1.0/vyr35/makefile
@@ -1,4 +1,10 @@
-all: generate generate2
+all: analyze analyze2 generate generate2
+
+analyze: analyze.c makefile
+	gcc -Wall -Os analyze.c -lm -o analyze
+
+analyze2: analyze2.c makefile
+	gcc -Wall -Os analyze2.c -lm -o analyze2
 
 generate: generate.c makefile
 	gcc -Wall -Os generate.c -lm -o generate
